--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         "psr/simple-cache": "^1.0",
         "nesbot/carbon": "^2.66"
     },
+    "scripts": {
+        "check-compatibility": "phpcs -p src --standard=PHPCompatibility --runtime-set testVersion 7.4-",
+        "test": "pest"
+    },
     "autoload": {
         "psr-4": {
             "Dsewth\\SimpleCache\\": "src/"
@@ -21,11 +25,14 @@
     "require-dev": {
         "pestphp/pest": "^2.3",
         "mockery/mockery": "^1.5",
-        "symfony/dotenv": "^6.2"
+        "symfony/dotenv": "^6.2",
+        "phpcompatibility/php-compatibility": "^10.0"
     },
     "config": {
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
