--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "pestphp/pest": "^2.3",
         "mockery/mockery": "^1.5",
         "symfony/dotenv": "^6.2",
-        "phpcompatibility/php-compatibility": "^10.0"
+        "phpcompatibility/php-compatibility": "^10.0@dev"
     },
     "config": {
         "allow-plugins": {
@@ -34,5 +34,5 @@
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
